# sdk-zephyr

samples/hello_world/: CMakeLists.txt
samples/hello_world/src/: main.c
